tests/baselines/reference/callOnClass.errors.txt
==== tests/cases/compiler/callOnClass.ts (1 errors) ====
    class C { }
    var c = C();
            ~
!!! callOnClass.ts(2,9): error TS2161: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
     
    